[package]
name = "dtolnay"
version = "0.0.9"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "docs.rs as a publishing platform?"
repository = "https://github.com/dtolnay/essay"
documentation = "https://docs.rs/dtolnay"
edition = "2018"

[badges]
travis-ci = { repository = "dtolnay/essay" }

[dev-dependencies]
futures = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
