[package]
name = "dtolnay"
version = "0.0.15"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "docs.rs as a publishing platform?"
documentation = "https://docs.rs/dtolnay"
edition = "2021"
keywords = ["dtolnay", "blog"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/essay"

[dependencies]
futures01 = { package = "futures", version = "0.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--html-in-header=src/html-in-header",
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
